--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
   </style>
   <body>
     <!--  Sonido -->
-    <audio id="star-wars-audio" controls>
+    <audio id="star-wars-audio" autoplay>
       <source
         src="musica/01. Star Wars Main Title ~ The Arrival At Naboo.mp3"
         type="audio/mp3"
